--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <h1>Welcome to this test API, there are 2 routes: POSTS and USERS </h1>
         <ul>
             <li>
-                <a href="https://sheltered-wildwood-48337.herokuapp.com/posts">POSTS</a>
+                <a href="https://jsma-api.herokuapp.com/posts">POSTS</a>
             </li>
             <li>
-                <a href="https://sheltered-wildwood-48337.herokuapp.com/users">USERS</a>
+                <a href="https://jsma-api.herokuapp.com/users">USERS</a>
             </li>
         </ul>
         <h1>You can do 4 methods: GET, POST, PATCH, DELETE</h1>
